dbsc.Core.Antlr/TableWithSchemaSpecificationWithCustomSelectListParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TableWithSchemaSpecificationWithCustomSelectList.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace dbsc.Core.Antlr {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class TableWithSchemaSpecificationWithCustomSelectListParser : Parser {
	public const int
		T__0=1, UNENCLOSED_ID_NAME=2, BRACKET_ENCLOSED_ID=3, WS_NO_NEWLINE=4, 
		NEWLINE=5, LETTER=6, NUMBER=7, WILDCARD=8, NEGATER=9, CUSTOM_SELECT=10;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'.'", "UNENCLOSED_ID_NAME", "BRACKET_ENCLOSED_ID", "WS_NO_NEWLINE", 
		"NEWLINE", "LETTER", "NUMBER", "'*'", "'-'", "CUSTOM_SELECT"
	};
	public const int
		RULE_tableSpecificationList = 0, RULE_tableSpecificationLine = 1, RULE_possiblyQualifiedTableLine = 2, 
		RULE_possiblyQualifiedTable = 3, RULE_unqualifiedTable = 4, RULE_qualifiedTable = 5, 
		RULE_identifier = 6;
	public static readonly string[] ruleNames = {
		"tableSpecificationList", "tableSpecificationLine", "possiblyQualifiedTableLine", 
		"possiblyQualifiedTable", "unqualifiedTable", "qualifiedTable", "identifier"
	};

	public override string GrammarFileName { get { return "TableWithSchemaSpecificationWithCustomSelectList.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public TableWithSchemaSpecificationWithCustomSelectListParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class TableSpecificationListContext : ParserRuleContext {
		public ITerminalNode[] NEWLINE() { return GetTokens(TableWithSchemaSpecificationWithCustomSelectListParser.NEWLINE); }
		public ITerminalNode Eof() { return GetToken(TableWithSchemaSpecificationWithCustomSelectListParser.Eof, 0); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(TableWithSchemaSpecificationWithCustomSelectListParser.NEWLINE, i);
		}
		public TableSpecificationLineContext[] tableSpecificationLine() {
			return GetRuleContexts<TableSpecificationLineContext>();
		}
		public TableSpecificationLineContext tableSpecificationLine(int i) {
			return GetRuleContext<TableSpecificationLineContext>(i);
		}
		public TableSpecificationListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableSpecificationList; } }
	}

	[RuleVersion(0)]
	public TableSpecificationListContext tableSpecificationList() {
		TableSpecificationListContext _localctx = new TableSpecificationListContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_tableSpecificationList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 14; tableSpecificationLine();
			State = 19;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==NEWLINE) {
				{
				{
				State = 15; Match(NEWLINE);
				State = 16; tableSpecificationLine();
				}
				}
				State = 21;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 22; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TableSpecificationLineContext : ParserRuleContext {
		public PossiblyQualifiedTableLineContext possiblyQualifiedTableLine() {
			return GetRuleContext<PossiblyQualifiedTableLineContext>(0);
		}
		public TableSpecificationLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tableSpecificationLine; } }
	}

	[RuleVersion(0)]
	public TableSpecificationLineContext tableSpecificationLine() {
		TableSpecificationLineContext _localctx = new TableSpecificationLineContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_tableSpecificationLine);
		try {
			State = 26;
			switch (_input.La(1)) {
			case UNENCLOSED_ID_NAME:
			case BRACKET_ENCLOSED_ID:
			case NEGATER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 24; possiblyQualifiedTableLine();
				}
				break;
			case Eof:
			case NEWLINE:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PossiblyQualifiedTableLineContext : ParserRuleContext {
		public ITerminalNode CUSTOM_SELECT() { return GetToken(TableWithSchemaSpecificationWithCustomSelectListParser.CUSTOM_SELECT, 0); }
		public ITerminalNode NEGATER() { return GetToken(TableWithSchemaSpecificationWithCustomSelectListParser.NEGATER, 0); }
		public PossiblyQualifiedTableContext possiblyQualifiedTable() {
			return GetRuleContext<PossiblyQualifiedTableContext>(0);
		}
		public PossiblyQualifiedTableLineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_possiblyQualifiedTableLine; } }
	}

	[RuleVersion(0)]
	public PossiblyQualifiedTableLineContext possiblyQualifiedTableLine() {
		PossiblyQualifiedTableLineContext _localctx = new PossiblyQualifiedTableLineContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_possiblyQualifiedTableLine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 29;
			_la = _input.La(1);
			if (_la==NEGATER) {
				{
				State = 28; Match(NEGATER);
				}
			}

			State = 31; possiblyQualifiedTable();
			State = 33;
			_la = _input.La(1);
			if (_la==CUSTOM_SELECT) {
				{
				State = 32; Match(CUSTOM_SELECT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PossiblyQualifiedTableContext : ParserRuleContext {
		public UnqualifiedTableContext unqualifiedTable() {
			return GetRuleContext<UnqualifiedTableContext>(0);
		}
		public QualifiedTableContext qualifiedTable() {
			return GetRuleContext<QualifiedTableContext>(0);
		}
		public PossiblyQualifiedTableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_possiblyQualifiedTable; } }
	}

	[RuleVersion(0)]
	public PossiblyQualifiedTableContext possiblyQualifiedTable() {
		PossiblyQualifiedTableContext _localctx = new PossiblyQualifiedTableContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_possiblyQualifiedTable);
		try {
			State = 37;
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 35; unqualifiedTable();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 36; qualifiedTable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnqualifiedTableContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public UnqualifiedTableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unqualifiedTable; } }
	}

	[RuleVersion(0)]
	public UnqualifiedTableContext unqualifiedTable() {
		UnqualifiedTableContext _localctx = new UnqualifiedTableContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_unqualifiedTable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QualifiedTableContext : ParserRuleContext {
		public IdentifierContext schema;
		public IdentifierContext table;
		public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		public QualifiedTableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_qualifiedTable; } }
	}

	[RuleVersion(0)]
	public QualifiedTableContext qualifiedTable() {
		QualifiedTableContext _localctx = new QualifiedTableContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_qualifiedTable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41; _localctx.schema = identifier();
			State = 42; Match(T__0);
			State = 43; _localctx.table = identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierContext : ParserRuleContext {
		public IToken id;
		public ITerminalNode BRACKET_ENCLOSED_ID() { return GetToken(TableWithSchemaSpecificationWithCustomSelectListParser.BRACKET_ENCLOSED_ID, 0); }
		public ITerminalNode UNENCLOSED_ID_NAME() { return GetToken(TableWithSchemaSpecificationWithCustomSelectListParser.UNENCLOSED_ID_NAME, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifier; } }
	}

	[RuleVersion(0)]
	public IdentifierContext identifier() {
		IdentifierContext _localctx = new IdentifierContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_identifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			_localctx.id = _input.Lt(1);
			_la = _input.La(1);
			if ( !(_la==UNENCLOSED_ID_NAME || _la==BRACKET_ENCLOSED_ID) ) {
				_localctx.id = _errHandler.RecoverInline(this);
			}
			Consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
} // namespace dbsc.Core.Antlr
